<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.mm2d.android.vmb.MainActivity"
    >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_theme"
        android:orderInCategory="101"
        android:title="@string/action_theme"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_show_history"
        android:orderInCategory="102"
        android:title="@string/action_show_history"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="103"
        android:title="@string/action_clear_history"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="104"
        android:title="@string/action_share"
        app:showAsAction="never"
        />
</menu>
